<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangular_black_border_white"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/dialog_layout_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_white1"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/two_fact_string"
            android:textColor="@color/app_white1"
            android:textSize="@dimen/font_extreme"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/otp_string"
                android:inputType="phone"
                android:maxLines="1"
                android:textColorHint="@color/app_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="2.5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/app_hint"
                android:gravity="center"
                android:text="@string/no_string"
                android:textColor="@color/app_black"
                android:textSize="@dimen/font_big"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="2.5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_back"
                android:gravity="center"
                android:text="@string/submit_string"
                android:textColor="@color/app_white1"
                android:textSize="@dimen/font_big"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>