<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".VIEW.FRAGMENT.LoginUi">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/rectangular_black_border_white"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/app_name"
                android:padding="2dp"
                android:src="@mipmap/ic_launcher_round" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_string"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColorHint="@color/app_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_string"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/app_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_drop_shadow" />

            <Button
                android:id="@+id/sign_hit"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/rectangular_green"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/sign_string"
                android:textColor="@color/app_white1" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>